--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-minimal
+sidebar:
+  - getting-started
+  - label: Dev Docs
+    children:
+      - doc-1
+      - doc-2
+  - deployment
